2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support for merged ttk widgets in Tk 8.5a6. Should
	handle 8.4, 8.4+tile 0.7 and 8.5a6 now. Some widget packing bugs
	squashed too.

2006-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix retrieving history when proxy disabled.

2006-10-15  Joe Mistachkin  <joe@mistachkin.com>

	* tkchat.tcl: Corrected HEADUrl.

2006-09-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Added a benign SSL certificate check to warn about
	               expired and self-signed certificates.

2006-09-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkchat::PasteDlg): Doh! Scrollbar hooked to old
	               invalid widget name.

2006-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Make sure we only request tile 0.7 as 0.6 doesn't
	               work with the panedwindow any more.

2006-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 681734 - log memos to mbox file for later
	                perusal. Some font selection mods for Xft.

2006-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1274322 - added a dialog for sending text to
	                the paste.tclers.tk paste site. 
	* tkchat.tcl (::tkchat::LoadHistoryFromIndex): Added a base frame
	                to fix the look with tile widgets.

2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1482926 - add an /eval command to evaluate
	                short tcl scripts.
	* tkchat.tcl (::tkchat::ParseHistLog): Work around the logs being
	                returned as iso8859-1 when the data is really utf-8.

2006-09-05  Kevin B. Kenny  <kennykb@acm.org>

	* tkchat.tcl - Added hooks to KHIM (Kevin's Hacky Input Method)
	to allow easier typing of international characters.
	
2006-06-27 Torsten Berg  <berg@typoscriptics.de>

	* tkchat.tcl: - Tile support for the pane in the main window